tests/NormalTests/paczka1/fuzzy1/60117603.err
Error in line 8: HV20a A145 92,46
Error in line 6: Jzf S748 85,5
Error in line 13: HV20a A145 247,2
Error in line 20: aWI S558 88,1
Error in line 24: HV20a S748 2,3
Error in line 28: HV20a S558 64,4
Error in line 32: HV20a A399 87,3
Error in line 35: HV20a S558 11,1
Error in line 37: HV20a A145 22,5
Error in line 39: HV20a S748 84,2
